Remove leftover guava collections (#760)
* Remove leftover guava collections

* Fixed * imports