@@ -15,7 +15,6 @@
  */
 package com.hotels.styx.proxy;
 
-import com.google.common.collect.ImmutableList;
 import com.hotels.styx.Environment;
 import com.hotels.styx.StyxConfig;
 import com.hotels.styx.api.Eventual;
@@ -31,11 +30,13 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import reactor.core.publisher.Mono;
 
-import static com.hotels.styx.support.Support.requestContext;
+import java.util.List;
+
 import static com.hotels.styx.api.HttpResponseStatus.OK;
 import static com.hotels.styx.api.LiveHttpRequest.get;
 import static com.hotels.styx.api.LiveHttpResponse.response;
 import static com.hotels.styx.proxy.plugin.NamedPlugin.namedPlugin;
+import static com.hotels.styx.support.Support.requestContext;
 import static com.hotels.styx.support.matchers.IsOptional.isValue;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
@@ -54,7 +55,7 @@ public class InterceptorPipelineBuilderTest {
                 .registry(new MicrometerRegistry(new SimpleMeterRegistry()))
                 .configuration(StyxConfig.defaultConfig())
                 .build();
-        plugins = ImmutableList.of(
+        plugins = List.of(
                 namedPlugin("plug1",
                         (request, chain) ->
                                 chain.proceed(request)
